force-app/main/default/objects/SvcSolSyncLog__c/SvcSolSyncLog__c.object-meta.xml
<CustomObject>
    <description>IF-050 호출 후 동기화 시, ET_WBS_INFO에 맞지않는 서비스/솔루션 로그</description>
    <label>SvcSolSyncLog</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>SvcSolSyncLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SvcSolSyncLog</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>