force-app/main/default/objects/SvcSolSyncLog__c/fields/BizAttributeCode__c.field-meta.xml
<CustomField>
    <fullName>BizAttributeCode__c</fullName>
    <description>before BizAttr Code</description>
    <label>BizAttributeCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>