force-app/main/default/objects/SvcSolSyncLog__c/fields/DeletionFlag__c.field-meta.xml
<CustomField>
    <fullName>DeletionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>before deletion flag</description>
    <label>DeletionFlag</label>
    <type>Checkbox</type>
</CustomField>