force-app/main/default/objects/SvcSolSyncLog__c/fields/DeliveryDeptCode__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDeptCode__c</fullName>
    <description>실행부서 코드</description>
    <label>DeliveryDeptCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>