force-app/main/default/objects/SvcSolSyncLog__c/fields/IF_Log__c.field-meta.xml
<CustomField>
    <fullName>IF_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IF-050 IF_Log__c. (30일전 IF_Log 삭제되는 것 유의)</description>
    <label>IF_Log</label>
    <referenceTo>IF_Log__c</referenceTo>
    <relationshipLabel>SvcSolSyncLog</relationshipLabel>
    <relationshipName>SvcSolSyncLog</relationshipName>
    <type>Lookup</type>
</CustomField>