force-app/main/default/objects/SvcSolSyncLog__c/fields/SalesDeptCode__c.field-meta.xml
<CustomField>
    <fullName>SalesDeptCode__c</fullName>
    <label>SalesDeptCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>