force-app/main/default/objects/SvcSolSyncLog__c/fields/sBizAttributeCode__c.field-meta.xml
<CustomField>
    <fullName>sBizAttributeCode__c</fullName>
    <label>sBizAttributeCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>