force-app/main/default/objects/SvcSolSyncLog__c/fields/sDeletionFlag__c.field-meta.xml
<CustomField>
    <fullName>sDeletionFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sDeletionFlag</label>
    <type>Checkbox</type>
</CustomField>