force-app/main/default/objects/SvcSolSyncLog__c/fields/sDeliveryDeptCode__c.field-meta.xml
<CustomField>
    <fullName>sDeliveryDeptCode__c</fullName>
    <label>sDeliveryDeptCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>