force-app/main/default/objects/SvcSolSyncLog__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <description>before ServiceCode</description>
    <label>ServiceCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>