force-app/main/default/objects/SvcSolSyncLog__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution</label>
    <referenceTo>Solution__c</referenceTo>
    <relationshipLabel>SvcSolSyncLog</relationshipLabel>
    <relationshipName>SvcSolSyncLog</relationshipName>
    <type>Lookup</type>
</CustomField>