force-app/main/default/objects/SvcSolSyncLog__c/fields/SolutionCode__c.field-meta.xml
<CustomField>
    <fullName>SolutionCode__c</fullName>
    <label>SolutionCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>