force-app/main/default/objects/SvcSolSyncLog__c/fields/SolutionName__c.field-meta.xml
<CustomField>
    <fullName>SolutionName__c</fullName>
    <label>SolutionName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>