force-app/main/default/objects/SvcSolSyncLog__c/fields/sSalesDeptCode__c.field-meta.xml
<CustomField>
    <fullName>sSalesDeptCode__c</fullName>
    <label>sSalesDeptCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>