force-app/main/default/objects/SvcSolSyncLog__c/fields/sServiceCode__c.field-meta.xml
<CustomField>
    <fullName>sServiceCode__c</fullName>
    <description>화면기준 serviceCode 값</description>
    <label>sServiceCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>