force-app/main/default/objects/SvcSolSyncLog__c/fields/sServiceName__c.field-meta.xml
<CustomField>
    <fullName>sServiceName__c</fullName>
    <description>화면기준 Service Name</description>
    <label>sServiceName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>