force-app/main/default/objects/SvcSolSyncLog__c/fields/sSolutionCode__c.field-meta.xml
<CustomField>
    <fullName>sSolutionCode__c</fullName>
    <description>화면기준 SolutionCode</description>
    <label>sSolutionCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>