force-app/main/default/objects/SvcSolSyncLog__c/fields/sSolutionName__c.field-meta.xml
<CustomField>
    <fullName>sSolutionName__c</fullName>
    <description>화면기준 Solution Name</description>
    <label>sSolutionName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>