force-app/main/default/objects/SvcSolSyncLog__c/fields/sWBSClass__c.field-meta.xml
<CustomField>
    <fullName>sWBSClass__c</fullName>
    <description>화면기준 WBSClass</description>
    <label>sWBSClass</label>
    <length>20</length>
    <type>Text</type>
</CustomField>