force-app/main/default/objects/SvcSolSyncLog__c/fields/WBSClass__c.field-meta.xml
<CustomField>
    <fullName>WBSClass__c</fullName>
    <description>before WBSClass</description>
    <label>WBSClass</label>
    <length>10</length>
    <type>Text</type>
</CustomField>