force-app/main/default/objects/SvcSolSyncLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ItemNumber__c</columns>
    <columns>Opportunity__c</columns>
    <columns>OpportunityCode__c</columns>
    <columns>IF_Log__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>